--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Indecision App",
+  "name": "indecisionapp",
   "version": "1.0.0",
   "description": "indecision-react-app",
   "main": "index.js",
